Fix wrong z-index on sticky table headers
Some elements (like buttons) would be layed over the header, so we just put the headers up to 1.

--- a/application/resources/assets/sass/_tables.scss
+++ b/application/resources/assets/sass/_tables.scss
@@ -3,4 +3,5 @@
   top: 66px;
   box-shadow: 0 2px 1px -1px rgba(black, 0.1);
   background: $white;
+  z-index: 1;
 }
